Cambios, agregamos mas texto

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
   <h1>Hola mundo :)</h1>  
   <p>Siempre que se inicia en programación, es obrigación hacer una pagina web que diga "Hola mundo :)"</p>
+  <p>Si no lo haces, no vas a triunfar :)</p>
 </body>
 </html>
